--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             echo 'export PATH="$HOME/.yarn/bin:$PATH"' >> $BASH_ENV
       - run:
           name: Install dependencies
-          command: yarn install --offline --frozen-lockfile
+          command: yarn install --frozen-lockfile
       - run:
           name: Build packages
           command: yarn build
@@ -39,7 +39,7 @@ jobs:
             echo 'export PATH="$HOME/.yarn/bin:$PATH"' >> $BASH_ENV
       - run:
           name: Install dependencies
-          command: yarn install --offline --frozen-lockfile
+          command: yarn install --frozen-lockfile
       - run:
           name: Build packages
           command: yarn build
@@ -58,7 +58,7 @@ jobs:
             echo 'export PATH="$HOME/.yarn/bin:$PATH"' >> $BASH_ENV
       - run:
           name: Install dependencies
-          command: yarn install --offline --frozen-lockfile
+          command: yarn install --frozen-lockfile
       - run:
           name: Build packages
           command: yarn build
@@ -82,7 +82,7 @@ jobs:
             echo 'export PATH="$HOME/.yarn/bin:$PATH"' >> $BASH_ENV
       - run:
           name: Install dependencies
-          command: yarn install --offline --frozen-lockfile
+          command: yarn install --frozen-lockfile
       - run:
           name: Build packages
           command: yarn build
