--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chancethedev/colors",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "Apache-2.0",
   "repository": "https://github.com/chancestrickland/chancethedev-design/tree/master/packages/colors",
   "bugs": "https://github.com/chancestrickland/chancethedev-design/issues",
@@ -20,10 +20,10 @@
     "clean": "rimraf css es lib umd scss"
   },
   "devDependencies": {
-    "@chancethedev/bundler": "0.0.1",
-    "@chancethedev/cli-reporter": "0.0.1",
-    "@chancethedev/scss-generator": "0.0.1",
-    "@chancethedev/test-utils": "0.0.1",
+    "@chancethedev/bundler": "^0.0.2",
+    "@chancethedev/cli-reporter": "^0.0.2",
+    "@chancethedev/scss-generator": "^0.0.2",
+    "@chancethedev/test-utils": "^0.0.2",
     "change-case": "3.1.0",
     "core-js": "3.2.1",
     "fs-extra": "8.1.0",
